[project]
name = "ai-car"
version = "0.1.0"
description = "Autonomous driving model training - NVIDIA end-to-end"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26.0,<2.0",
    "pandas>=2.0.0",
    "tensorflow[and-cuda]>=2.16.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "imgaug>=0.4.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
